<resources>
    <string name="app_name">AndroidFirstClass</string>
    <string name="login">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="todo">TODO</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="welcome">Welcome</string>
    <string name="tv_begin">登录页面跳转中</string>
    <string name="register">注册</string>
    <string name="btn_cancel">退出</string>
    <string name="remmber_pass">记住密码</string>
</resources>